delete tablestore-for-agent-memory-spring-ai in examples